# pseudoswapper

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  USER_GUIDE.md  employees_sample.csv  pseudoswapper_config.example.yaml  pyproject.toml
.claude/: settings.json
doc-share/: TESTING_QUICKSTART.txt  cached_conversation.txt
doc-share/_framework/: CLAUDE_template.md  DESIGN_skeleton.md  PATTERN_cli_structure.md  PATTERN_config.md  PATTERN_testing.md  PATTERN_workdir.md
src/pseudoswapper/: cli.py  config.py  detector.py  dsar.py  entity_registry.py  recognizers.py  replacer.py  restore.py  session.py  tokenizer.py
src/pseudoswapper/extractors/: docx.py  eml.py  msg.py  pdf.py
src/pseudoswapper/modes/: document.py  redact.py  structured.py
tests/: conftest.py  test_config.py  test_detector.py  test_document.py  test_docx.py  test_eml.py  test_entity_registry.py  test_msg.py  test_pdf.py  test_redact.py  test_replacer.py  test_restore.py  test_session.py  test_structured.py  test_tokenizer.py
tests/fixtures/: sample_document.docx  sample_document.txt  sample_email.eml  sample_email.msg  sample_structured.csv  sample_structured.json  sample_structured.xlsx
