[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudoswapper"
version = "0.1.0"
description = "Local CLI tool for tokenising sensitive data before sharing with AI assistants"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
pseudoswapper = "pseudoswapper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
