[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudoswapper"
version = "0.1.0"
description = "Local CLI tool for tokenising sensitive data before sharing with AI assistants"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "David Au", email = "imauchi.sd@gmail.com"}
]
keywords = ["privacy", "redaction", "pii", "data-masking", "pseudonymization", "tokenization", "ai", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pdfplumber>=0.10",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
pseudoswapper = "pseudoswapper.cli:app"

[project.urls]
Homepage = "https://github.com/imauchi-sd/pseudoswapper"
Repository = "https://github.com/imauchi-sd/pseudoswapper"
"Bug Tracker" = "https://github.com/imauchi-sd/pseudoswapper/issues"
Funding = "https://ko-fi.com/imauchisd"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
